2014-10-30  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Tighten exportPattern for .default as suggested by Bill Dunlap

2014-10-29  Michele Salvadore <michele.salvadore@gmail.com>

	* R/bond.R: Added a price parameter to FixedRateBond to calculate based on clean price
	* src/bonds.cpp: new function wrapping price based calculation
	* man/Bond.Rd: updated documentation and examples
	* man/FixedRateBond.Rd: Ditto
	* tests/RQuantLib.R: Corresponding test update
	* tests/RQuantLib.Rout.save: Ditto

2014-10-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: New minor version

	* src/bonds.cpp: Remove last SEXP instances in function interfaces
	* src/hullwhite.cpp: Idem
	* src/utils.cpp: Idem

	* inst/include/rquantlib_internal.h: Updated accordingly

2014-10-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/discount.cpp: Curve exported in 'table' object now advances by
	roughly one business months, also switched to using STL containers
	grown and then exported back to R

	* inst/include/rquantlib_internal.h: Declare advanceDate() function

	* man/Bond.Rd: Re-set evaluation date in bond example

2014-10-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.dates.R: R side of new date conversion tests
	* inst/unitTests/cpp/dates.cpp: C++ side of new date conversion tests

	* R/unitTest.R: Added new support function unitTestSetup()

	* NAMESPACE: Also import sourceCpp from Rcpp

2014-10-24  Dirk Eddelbuettel  <edd@debian.org>

	* src/bonds.cpp: Use the calendar from the RQL context
	* src/zero.cpp: Ditto

2014-10-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/dates.cpp (advanceDate): Use a calendar from the RQL context

2014-10-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/rquantlib_impl.h: New header with implementations for
	as<>() and wrap(), currently only for Date mapping between QL and R
	* inst/include/rquantlib_wrappers.h: Reduced to declarations only

	* inst/include/RQuantLib.h: Include new header rquantlib_impl.h if