@@ -1,7 +1,7 @@
 Package: RQuantLib
 Title: R Interface to the QuantLib Library
-Version: 0.3.12.8
-Date: 2014-10-25
+Version: 0.3.12.10
+Date: 2014-11-06
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Author: Dirk Eddelbuettel <edd@debian.org> and Khanh Nguyen <knguyen@cs.umb.edu>
 Description: The RQuantLib package makes parts of QuantLib accessible from R
